--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -2,26 +2,15 @@ name: Deploy to Amazon ECR
 
 on:
   push:
-    branches: [ "main" ]
-
-env:
-  AWS_REGION: MY_AWS_REGION                   
-  ECR_REPOSITORY: MY_ECR_REPOSITORY          
-  ECS_SERVICE: MY_ECS_SERVICE                 
-  ECS_CLUSTER: MY_ECS_CLUSTER                
-  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION 
-                                             
-  CONTAINER_NAME: MY_CONTAINER_NAME           
+    branches: [ "main" ]          
                                      
-
 permissions:
   contents: read
 
 jobs:
-  deploy:
+  build:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
     - name: Checkout
@@ -32,7 +21,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+        aws-region: us-east-1
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -42,6 +31,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: flask_docker
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
