--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,15 +1,11 @@
-name: Deploy to Amazon ECR
+name: Docker image name
 
 on:
   push:
     branches: [ "main" ]          
-                                     
-permissions:
-  contents: read
 
 jobs:
   build:
-    name: Deploy
     runs-on: ubuntu-latest
 
     steps:
@@ -28,15 +24,10 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build, tag, and push image to Amazon ECR
-      id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: flask_docker
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        # Build a docker container and
-        # push it to ECR so that it can
-        # be deployed to ECS.
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
