--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -21,11 +21,11 @@ jobs:
       - name: Build and Tag Docker Image
         run: |
           docker build -t my-ecr-repo:latest .
-          docker tag my-ecr-repo:latest <aws_account_id>.dkr.ecr.<region>.amazonaws.com/my-ecr-repo:latest
+          docker tag my-ecr-repo:latest 512174193979.dkr.ecr.us-east-1.amazonaws.com/flask_docker:latest
       
       - name: Log in to Amazon ECR
         run: |
-          aws ecr get-login-password | docker login --username AWS --password-stdin <aws_account_id>.dkr.ecr.<region>.amazonaws.com
+          aws ecr get-login-password | docker login --username AWS --password-stdin 512174193979.dkr.ecr.us-east-1.amazonaws.com
       
       - name: Push Docker Image to Amazon ECR
         run: |
