--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,15 +1,13 @@
-name: Deploy to Amazon ECS
+name: Deploy to Amazon ECR
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  deploy:
-    name: Deploy
+  build:
     runs-on: ubuntu-latest
-    environment: production
-
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -29,6 +27,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: flask_docker
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
