--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -6,10 +6,11 @@ on:
 
 jobs:
   build:
+    name: Build image
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout
+    - name: Check out code
       uses: actions/checkout@v3
 
     - name: Configure AWS credentials
