--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,6 +1,7 @@
+
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
 name: mdh-app
 
 jobs:
@@ -17,7 +18,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.SECRET_KEY }}
-        aws-region: us-east-1
+        aws-region: us-west-2
 
     - name: Login to Amazon ECR
       id: login-ecr
